...
    <string name="second_onboarding_text">10 Wisata Bali Baru merupakan wisata yang kedepannya akan dilakukan pengembangan lebih lanjut oleh pemerintah pariwisata Indonesia. Wisata tersebut antara lain Danau Toba, Tanjung Kelayang, Tanjung Lesung, Kepulauan Seribu, Borobudur, Bromo Tengger Semeru, Mandalika, Labuan Bajo, Wakatobi, dan Morotai.</string>
    <string name="third_onboarding_text">Let the TourIn app will introduce you 10 New Bali Tours.</string>
    <string name="enjoy_your_vacation">Enjoy Your Vacation</string>
    <string name="we_will_guide_you_to_find_public_facilities">We will guide you to find public facilities.</string>
    <string name="let_s_travel">Let’s Travel!</string>
    <string name="discover_new_bali_in_indonesia">Let’s travel to 10 new Bali, Indonesia</string>
    <string name="get_started">Get Started</string>
    <string name="please_log_in_to_continue">Please log in to continue</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="bg_login">bg_login</string>
    <string name="register">Register</string>
    <string name="create_new_account">Create new account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account?</string>
    <string name="candi_borobudur">Candi Borobudur</string>
    <string name="greeting">Good Morning,</string>
    <string name="john_doe">John Doe</string>
    <string name="popular_tour">Popular Tour</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="route">Route</string>
    <string name="example_address">Jl. Badrawati, Kw. Candi Borobudur, Borobudur, Kec. Borobudur, Kabupaten Magelang, Jawa Tengah</string>
    <string name="failed_login">Failed login</string>
    <string name="message">Message</string>
    <string name="error">Error</string>
    <string name="registration_failed">Registration failed</string>
    <string name="successful_registration">Successful Registration</string>
...
