...
        app:hintTextColor="@color/teal_theme"
       app:layout_constraintTop_toBottomOf="@id/tv_describe_login"
        app:startIconDrawable="@drawable/ic_mail"
        app:startIconTint="@color/grey_theme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
...
        app:hintTextColor="@color/teal_theme"
        app:layout_constraintTop_toBottomOf="@id/email_container"
        app:startIconDrawable="@drawable/ic_padlock"
        app:startIconTint="@color/grey_theme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
...
        android:textSize="16sp"
        android:layout_gravity="end"
        app:layout_constraintEnd_toEndOf="@id/password_container"
        app:layout_constraintTop_toBottomOf="@id/password_container" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Masuk"
...
