...
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="64dp"
        android:foreground="@drawable/ic_next"
        android:src="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
...
