...
            app:lottie_autoPlay="true"
            app:lottie_fileName="location_pin.json"
            app:lottie_loop="true"
            app:lottie_speed="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:drawableLeft="@drawable/ic_directions"
            android:drawableTint="@color/white"
            android:text="Rute"
...
